hphp/test/slow/expression_trees/blocks_yield.php.expectf
Fatal error: Expression trees only support simple lambdas, without features like `async`, generators or capabilities. in %s/blocks_yield.php on line 14
